welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:16: error: expected class or object definition
def isFacingTrail(c : Color):Boolean = {
^SlugSnail:33: error: Unmatched closing brace '}' ignored here
}
^